solc_mutator_ossfuzz_seed_corpus/test_solidity/test_dce564eebffda8875936a0316d769405523b46ea74efb2319c3ba4e22ef464c0_b5f76912f928fe86cfc2bf41b4d4dc9ee9c5b7b2_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
contract C0 {
  bytes13  public s0 = bytes13(0xffffffffffffffffffffffffff);
  int168 immutable  s1;
  constructor(int168 i0)   {
    s1 = (int168(-120620623354932656978886952037130460073873260560432) ^ int168(187072209578355573530071658587684226515959365500927));
    {
      (bool l0, bytes memory l1) = address(this).call(bytes("000000000000000000000000000000000000000000001d5ad04c47c768b0eeea70ad"));
      if ((uint160(1461501637330902918203684832716283019655932542975) < ((uint160(((uint160(1461501637330902918203684832716283019655932542975) | uint160(1461501637330902918203684832716283019655932542975)) / uint160(0))) << uint96(uint96(67001435939236784591838941044))) % uint160(0))))
      {
        (bool l2, bytes memory l3) = address(this).call("00000000000000000000000000000000000000000000000000000000000000");
      }
      bytes11 l4 = bytes11(0x8f4bbc8285c0ee69e90df2);
      for(      bytes18 l5 = bytes18(0xffffffffffffffffffffffffffffffffffff);
(!(false));
((uint104(((((~(uint104(11035700804840530417988621458119))) ^ uint104(0)) + uint104(20282409603651670423947251286015)) / uint104(20282409603651670423947251286015))) % uint104(0)) * uint104(0)))
      {
        unchecked {
          bool[] storage l6;
          if (true)
          {
          }
          else if (l6[uint256(0)])
          {
            (bool l7, bytes memory l8) = address(this).call("000000000000000000");
          }
          else if ((true || true))
          {
          }
          continue;
          int200 l9 = ((int200(803469022129495137770981046170581301261101496891396417650687) % ((int200(0) + int200(803469022129495137770981046170581301261101496891396417650687)) % int200(803469022129495137770981046170581301261101496891396417650687))) + int200(-182410196899553739089872911022821929100005280305601798000610));
          if (true)
          {
            continue;
          }
          continue;
        }
      }
      (bool l10, bytes memory l11) = address(this).call("470d348d360cc3d3ffffffffffffffffffffffffffffffffffffffffff");
    }
  }
  function f0(address[] calldata i0,bool i1) private    returns(int128 o0,string memory o1,bytes23[] memory o2)
  {
    (o2) = (new bytes23[](2));
    if (false)
    {
      bool l0 = true;
    }
  }
  fallback() external virtual  
  {
    return;
    if (false)
    {
    }
    else if (false)
    {
    }
  }
  function f2(bool i0) public    returns(bool o0)
  {
    (bool l0, bytes memory l1) = address(this).call("0000000000000000000000000000000000000000000000000000000000");
    (s0, s0) = (bytes13(0x6549a1503b1859c2453bed3cfb), bytes13(0x05440ae667fc0af396822f9d4a));
  }
}
bool constant cons0 = true;
// ----
// TypeError 3464: (su0.sol:1313-1315): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// Warning 5740: (su0.sol:1525-1906): Unreachable code.
// Warning 5740: (su0.sol:1917-1925): Unreachable code.
// Warning 5740: (su0.sol:2326-2380): Unreachable code.
